--- a/public/akhaliambebi.html
+++ b/public/akhaliambebi.html
@@ -62,6 +62,8 @@
                             
                         </div>
                     </a>
+                    <button id="logoutBtn">Logout</button>
+
              
             </div>
             </div>
@@ -311,7 +313,6 @@
     </div>  
   </footer>
 
-    <script type="module" src="script.js"></script>
     <script type="module" src="login.js"></script>
     <script type="module" src="register.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
